--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./assets/icon/favicon.ico" />
     <title>Purna Drive</title>
   </head>
+
   <body>
     <div id="drive">
       <header>
@@ -16,8 +17,7 @@
             <div class="handwriting">
               <svg
                 class="purna-svg"
-                width="200"
-                version="1.1"
+                width="50px"
                 viewBox="0 0 1820 650"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -122,7 +122,7 @@
               />
             </svg>
           </i>
-          <p>Drag and drop a file here or click to select a file</p>
+          <p>Upload your files here.</p>
         </div>
         <!-- ===== FOR MANUAL INPUT BUTTON ===== -->
         <!-- <input type="submit" value="Upload" name="submit" class="submit-button"/> -->
